tests/test_files/error_type_mismatch.lark
def foo(x: bool, y: uint) -> bool {
  y
  //~ ERROR
}